k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      primitive: client
  template:
    metadata:
      labels:
        primitive: client
    spec:
      containers:
        - name: client
          image: jorakhachatryan/sample-fullstack-front
          ports:
            - containerPort: 3000
