k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    primitive: client
  ports:
    - port: 3000
      targetPort: 3000
