k8s/mysql-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    primitive: mysql
  ports:
    - port: 3306
      targetPort: 3306
